# moddingtextparser

./: README.md  pyproject.toml
moddingtextparser/: __init__.py  main.py  prompts.py
