[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moddingtextparser"
version = "2025.12.21151340"
description = "A new package is designed to analyze user-provided text questions about technical modding topics to identify key concepts, such as detecting mentions of premium checks within Android app modifications"
readme = "README.md"
authors = [{ name = "moddingtextparser", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/moddingtextparser"
